--- a/UE1/UE1.vcxproj
+++ b/UE1/UE1.vcxproj
@@ -141,12 +141,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bracketInstance.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SF.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bracketInstance.h" />
     <ClInclude Include="matplotlibcpp.h" />
     <ClInclude Include="SF.h" />
+    <ClInclude Include="VectorMath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
