--- a/UE1/UE1.vcxproj.filters
+++ b/UE1/UE1.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="SF.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bracketInstance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="matplotlibcpp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SF.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bracketInstance.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VectorMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
