--- a/UE2/UE2.vcxproj.filters
+++ b/UE2/UE2.vcxproj.filters
@@ -28,7 +28,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="txt sound file.txt">
+    <Text Include="txt_sound_file.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
