nstd started implementing more general purpose functions for vectors, arrays and matrices

--- a/UE2/UE2.vcxproj
+++ b/UE2/UE2.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="SF2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="nstd.h" />
     <ClInclude Include="SF2.h" />
   </ItemGroup>
   <ItemGroup>
