--- a/UE2/UE2.vcxproj.filters
+++ b/UE2/UE2.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="SF2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nstd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="txt_sound_file.txt">
