--- a/UE2/UE2.vcxproj.filters
+++ b/UE2/UE2.vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="txt_sound_file.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="dna_coordinates.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
