--- a/UE3/UE3.vcxproj.filters
+++ b/UE3/UE3.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="SF3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\UE1\SF.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SF3.h">
