--- a/UE3/UE3.vcxproj
+++ b/UE3/UE3.vcxproj
@@ -20,6 +20,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\UE1\SF.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SF3.cpp" />
   </ItemGroup>
@@ -117,6 +118,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)\UE2;$(SolutionDir)\UE1</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -134,7 +136,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\Dependencies\fftw\lib;$(SolutionDir)\Dependencies\Matplot++\lib\Matplot++;$(SolutionDir)\Dependencies\Matplot++\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\UE2;$(SolutionDir)\UE1;$(SolutionDir)\Dependencies\fftw\lib;$(SolutionDir)\Dependencies\Matplot++\lib\Matplot++;$(SolutionDir)\Dependencies\Matplot++\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>matplot.lib;nodesoup.lib;libfftw3-3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
