fixed bug with charges values

--- a/UE3/UE3.vcxproj
+++ b/UE3/UE3.vcxproj
@@ -25,7 +25,11 @@
     <ClCompile Include="SF3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\UE2\nstd.h" />
     <ClInclude Include="SF3.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
