--- a/UE3/UE3.vcxproj.filters
+++ b/UE3/UE3.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="SF3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\UE2\nstd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
